2003-06-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Canon-LBP-470.xml: Added the Canon LBP-470.

	* printer/Canon-LIPS-IV.xml, printer/Canon-LIPS-IVv.xml: Text
	  updates (LIPS 4 is a vector PDL).

	* driver/lips4.xml, driver/lips4v.xml: Text updates, printer list
	  updates.

	* opt/jap-Resolution.xml: 600 dpi default resolution for LIPS 4
	  printers.

	* opt/jap-PageSize.xml: More paper sizes for japanese printers.

	* driver/gdi.xml, opt/gdi-Economode.xml: Samsung "gdi" driver:
	  Added "Economode" option, text update.

2003-06-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4110.xml: Added the HP OfficeJet 4110
	  multi-function devices.

2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-PSC_2175.xml: Added the HP PSC 2175 multi-function
	  device.

	* makeMan.in: Removed this file as foomatic-db has no man pages.

2003-05-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2300_DL.xml, opt/foo2zjs-Duplex.xml:
	  Added auto-detection info for the Minolta magicolor 2300 DL and
	  fixed a bug in the "Duplex" option of the "foo2zjs" driver
	  (thanks to Rick Richardson for the patch).

	* printer/Minolta-magicolor_2200_DL.xml,
	  printer/Minolta-magicolor_2300_DL.xml: Added information about
	  unprintable margins (thanks to Rick Richardson for the patch).

	* printer/Generic-OAKT_Printer.xml: Added generic OAKT printer.

2003-05-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml: Updated text and added instructions
	  for head alignment.

2003-05-21  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2250TN.xml,
	  printer/HP-Business_Inkjet_2280.xml, printer/HP-2500C.xml,
	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
	  Updated text for printers without paper type sensor.
