@@ -1,6 +1,6 @@
-<printer id="printer/HP-OfficeJet_4110">
+<printer id="printer/HP-OfficeJet_4105">
   <make>HP</make>
-  <model>OfficeJet 4110</model>
+  <model>OfficeJet 4105</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -18,7 +18,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://h20000.www2.hp.com/bizsupport/TechSupport/Home.jsp?locale=en_US&amp;prodTypeId=18972&amp;prodSeriesId=90791</url>
+  <url></url>
   <lang>
     <proprietary /><!--no pjl-->
   </lang>
@@ -39,7 +39,10 @@
     Entry level sheet-fed multi-function
     device. Printer/scanner/copier/fax.&lt;p&gt;
 
-    The difference between the 4110, 4110xi, and 4110v models is the
+    As the OfficeJet 4110 series, but somewhat slower printing
+    engine.&lt;p&gt;
+
+    The difference between the 4105 and 4105z models is the
     size of the memory for received fax pages and for speed
     dials. Printing, scanning, and copying performance is exactly the
     same on all variations.&lt;p&gt;
