@@ -1,5 +1,10 @@
-2003-06-27  Till Kamppeter <till.kamppeter@gmx.net>
+2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/HP-OfficeJet_4105.xml, printer/HP-OfficeJet_4115.xml:
+	  Added the HP OfficeJet 4105/4115 multi-function devices.
+
+	* printer/HP-OfficeJet_4110.xml: Text update.
+	
 	* printer/Canon-LBP-470.xml: Added the Canon LBP-470.
 
 	* printer/Canon-LIPS-IV.xml, printer/Canon-LIPS-IVv.xml: Text
